# mp3gain

./: README.md
mp3gain2026/: CMakeLists.txt  dllmain.cpp  mp3gain2026.def  mp3gain2026_api.cpp  mp3gain2026_api.h
mp3gain2026-net10/: AboutForm.cs  AppSettings.cs  ConstantGainForm.cs  DarkToolStripRenderer.cs  LogOptionsForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Mp3FileInfo.cs  Mp3Gain2026-net10.sln  Mp3Gain2026.App.csproj  Mp3GainEngine.cs  NativeEngineInstance.cs  NativeEnginePool.cs  NativeMethods.cs  Program.cs  run_test.ps1
mp3gain2026-net48/mp3gain2026/: AboutForm.vb  AppSettings.vb  ConstantGainForm.vb  DarkToolStripRenderer.vb  LogOptionsForm.vb  Mp3FileInfo.vb  Mp3GainEngine.vb  NativeMethods.vb  frmMain.Designer.vb  frmMain.resx  frmMain.vb  mp3gain2026.sln  mp3gain2026.vbproj
mp3gain2026-net48/mp3gain2026/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
mp3gain2026/build_x64/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mp3gain2026.slnx  mp3gain2026.vcxproj  mp3gain2026.vcxproj.filters
mp3gain2026/build_x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mp3gain2026.slnx  mp3gain2026.vcxproj  mp3gain2026.vcxproj.filters
mp3gain2026/legacy/: gain_analysis.c  gain_analysis.h  mp3gain.c  mp3gain.h  rg_error.c
mp3gain2026/legacy/mpglibDBL/: config.h
